--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -10,3 +10,4 @@
     - { role: composer, tags: ['php'] }
     - { role: mariadb, tags: ['db'] }
     - { role: redis, tags: ['in-mem-store'] }
+    - { role: nvm, tags: ['node'] }
