--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -1,29 +1,39 @@
 ---
 - name: Add ppa Repository
   sudo: yes
-  apt_repository: repo=ppa:ondrej/{{ php.ppa }}
+  apt_repository:
+    repo: "ppa:ondrej/{{ php.ppa }}"
 
 - name: Update apt
   sudo: yes
-  apt: update_cache=yes
+  apt:
+    update_cache: yes
 
-- name: Install php5
+- name: Install php7-fpm
   sudo: yes
-  apt: pkg=php5 state=latest
+  apt:
+    pkg: php7.0-fpm
+    state: latest
 
-- name: Install php5-fpm
+- name: Install php7-cli
   sudo: yes
-  apt: pkg=php5-fpm state=latest
+  apt:
+    pkg: php7.0-cli
+    state: latest
 
 - name: Install PHP Packages
   sudo: yes
-  apt: pkg={{ item }} state=latest
+  apt:
+    pkg: "{{ item }}"
+    state: latest
   with_items: php_packages
   when: php_packages is defined
 
 - name: Install xDebug
   sudo: yes
-  apt: pkg=php5-xdebug state=latest
+  apt: 
+    pkg: php7.0-xdebug
+    state: latest
   when: php.xdebug
 
 - include: configure.yml
