--- a/ansible/roles/php/tasks/php-cli.yml
+++ b/ansible/roles/php/tasks/php-cli.yml
@@ -1,5 +1,6 @@
 ---
-- name: ensure timezone is set in cli php.ini
-  lineinfile: dest={{ php_ini.cli }}
-              regexp='^;?date.timezone'
-              line='date.timezone = {{ base.timezone }}'
+- name: Ensure timezone is set in cli php.ini
+  lineinfile:
+    dest: "{{ php_ini.cli }}"
+    regexp: "^;?date.timezone"
+    line: "date.timezone = {{ base.timezone }}"
