--- a/ansible/roles/php/vars/main.yml
+++ b/ansible/roles/php/vars/main.yml
@@ -1,18 +1,17 @@
 ---
 php_packages:
-  - php5-common
-  - php5-mcrypt
-  - php5-redis
-  - php5-mysql
-  - php5-pgsql
-  - php5-sqlite
-  - php5-curl
-  - php5-gd
-  - php5-gmp
-  - php5-memcached
-  - php5-imagick
-  - php5-json
-  - php5-intl
+  - php7.0-common
+  #- php7.0-redis
+  - php7.0-mysql
+  - php7.0-pgsql
+  - php7.0-sqlite3
+  - php7.0-curl
+  - php7.0-gd
+  #- php7.0-gmp
+  #- php7.0-memcached
+  #- php7.0-imagick
+  - php7.0-json
+  - php7.0-intl
 php_ini:
-  fpm: /etc/php5/fpm/php.ini
-  cli: /etc/php5/cli/php.ini
+  fpm: /etc/php/7.0/fpm/php.ini
+  cli: /etc/php/7.0/cli/php.ini
