--- a/ansible/vars/all.yml
+++ b/ansible/vars/all.yml
@@ -4,8 +4,8 @@ base:
   locale: nl_NL.UTF-8
   swap: true
 php:
-  ppa: php5-5.6
-  xdebug: true
+  ppa: php-7.0
+  xdebug: false # Not yet available for php7.0
   max_file_upload: 100m
   max_body_size: 106m
 nginx:
