--- a/ansible/roles/redis/handlers/main.yml
+++ b/ansible/roles/redis/handlers/main.yml
@@ -1,3 +1,12 @@
 ---
 - name: restart redis
-  service: name=redis-server enabled=yes state=restarted
+  service:
+    name: redis-server
+    enabled: yes
+    state: restarted
+
+- name: restart php7.0-fpm
+  service:
+    name: php7.0-fpm
+    enabled: yes
+    state: restarted
