--- a/ansible/roles/redis/tasks/main.yml
+++ b/ansible/roles/redis/tasks/main.yml
@@ -7,7 +7,9 @@
   sudo: yes
   apt: update_cache=yes
 
-- name: Install php5
+- name: Install Redis
   sudo: yes
   apt: pkg=redis-server state=latest
   notify: restart redis
+
+- include: phpredis.yml
