Made the spacing/format of the roles more consistent

--- a/ansible/roles/nginx/handlers/main.yml
+++ b/ansible/roles/nginx/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: restart nginx
-  service: name=nginx enabled=yes state=restarted
+  service:
+    name: nginx
+    enabled: yes
+    state: restarted
