--- a/ansible/roles/php/tasks/php-fpm.yml
+++ b/ansible/roles/php/tasks/php-fpm.yml
@@ -4,7 +4,7 @@
     dest: /etc/php/7.0/fpm/pool.d/www.conf
     state: present
     regexp: "^;?listen.owner"
-    line: "listen.owner = www-data"
+    line: listen.owner = www-data
   notify: restart php7.0-fpm
 
 - name: Set permissions on socket - group
@@ -12,7 +12,7 @@
     dest: /etc/php/7.0/fpm/pool.d/www.conf
     state: present
     regexp: "^;?listen.group"
-    line: "listen.group = www-data"
+    line: listen.group = www-data
   notify: restart php7.0-fpm
 
 - name: Set permissions on socket - mode
@@ -20,21 +20,21 @@
     dest: /etc/php/7.0/fpm/pool.d/www.conf
     state: present
     regexp: "^;?listen.mode"
-    line: "listen.mode = 0660"
+    line: listen.mode = 0660
   notify: restart php7.0-fpm
 
 - name: Ensure timezone is set in fpm php.ini
   lineinfile:
     dest: "{{ php_ini.fpm }}"
     regexp: "^;?date.timezone"
-    line: "date.timezone = {{ base.timezone }}"
+    line: date.timezone = {{ base.timezone }}
   notify: restart php7.0-fpm
 
 - name: Disable fix_pathinfo for php .ini files
   lineinfile:
     dest: "{{ php_ini.fpm }}"
     regexp: "^;?cgi.fix_pathinfo"
-    line: "cgi.fix_pathinfo=0"
+    line: cgi.fix_pathinfo=0
   notify: restart php7.0-fpm
 
 - name: Set max upload filesize
@@ -47,6 +47,6 @@
 - name: Set max post size
   lineinfile:
     dest: "{{ php_ini.fpm }}"
-    regexp: "'^;?post_max_size"
+    regexp: "^;?post_max_size"
     line: "post_max_size = {{ php.max_body_size }}"
   notify: restart php7.0-fpm
