--- a/ansible/roles/base/tasks/swap.yml
+++ b/ansible/roles/base/tasks/swap.yml
@@ -3,21 +3,23 @@
 # todo Use a variable to force swap (re)creation
 
 - name: Create swap file
-  command: dd if=/dev/zero of={{ swap.file_path }} bs=1M count={{ swap.file_size_mb }} creates="{{ swap.file_path }}"
+  command: "dd if=/dev/zero of={{ swap.file_path }} bs=1M count={{ swap.file_size_mb }}"
+  args:
+    creates: "{{ swap.file_path }}"
   tags:
     - swap.file.create
 
 - name: Change swap file permissions
-  file: >
-    path="{{ swap.file_path }}"
-    owner=root
-    group=root
-    mode=0600
+  file:
+    path: "{{ swap.file_path }}"
+    owner: root
+    group: root
+    mode: 0600
   tags:
     - swap.file.permissions
 
 - name: Check swap file type
-  command: file {{ swap.file_path }}
+  command: "file {{ swap.file_path }}"
   register: swapfile
   tags:
     - swap.file.mkswap
@@ -29,14 +31,14 @@
     - swap.file.mkswap
 
 - name: Write swap entry in fstab
-  mount: >
-    name=none
-    src={{ swap.file_path }}
-    fstype=swap
-    opts=sw
-    passno=0
-    dump=0
-    state=present
+  mount:
+    name: none
+    src: "{{ swap.file_path }}"
+    fstype: swap
+    opts: sw
+    passno: 0
+    dump: 0
+    state: present
   tags:
     - swap.fstab
 
