--- a/ansible/roles/mariadb/handlers/main.yml
+++ b/ansible/roles/mariadb/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: restart mariadb
-  service: name=mysql enabled=yes state=restarted
+  service:
+    name: mysql
+    enabled: yes
+    state: restarted
