--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -8,6 +8,7 @@
     - { role: nginx, tags: ['server'] }
     - { role: php, tags: ['php`'] }
     - { role: composer, tags: ['php'] }
-    - { role: mariadb, tags: ['db'] }
+    - { role: mariadb, tags: ['maria'] }
     - { role: redis, tags: ['in-mem-store'] }
     - { role: nvm, tags: ['node'] }
+    - { role: mongodb, tags: ['mongo'] }
