--- a/ansible/roles/composer/tasks/main.yml
+++ b/ansible/roles/composer/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Install Composer
+- name: Composer | Install Composer
   shell: "curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer"
   args:
     creates: /usr/local/bin/composer
