--- a/ansible/roles/mariadb/tasks/main.yml
+++ b/ansible/roles/mariadb/tasks/main.yml
@@ -1,30 +1,29 @@
 ---
-- name: Add MariaDB-Repository
-  sudo: yes
-  apt_repository:
-    repo: "deb [arch=amd64,i386] http://ams2.mirrors.digitalocean.com/mariadb/repo/10.1/ubuntu {{ ansible_distribution_release }} main"
-    state: present
-
-- name: Add Key for MariaDB Repository
+- name: MariaDB | Add key for MariaDB repository
   sudo: yes
   apt_key:
     url: "http://keyserver.ubuntu.com/pks/lookup?op=get&search=0xcbcb082a1bb943db"
+    state: present
 
-- name: Update apt
+- name: MariaDB | Add MariaDB repository
   sudo: yes
-  apt:
+  apt_repository:
+    repo: "deb [arch=amd64,i386] http://ams2.mirrors.digitalocean.com/mariadb/repo/10.1/ubuntu {{ ansible_distribution_release }} main"
     update_cache: yes
+    state: present
 
-- name: mariadb | Install MariaDB Packages
+- name: MariaDB | Install MariaDB packages
   sudo: yes
   apt:
     pkg: "{{ item }}"
-    state: latest
+    update_cache: yes
+    cache_valid_time: 3600
+    state: present
   with_items:
     - mariadb-server
     - python-mysqldb
 
-- name: mariadb | Update root password for all root accounts
+- name: MariaDB | Update root password for all root accounts
   mysql_user:
     name: root
     host: "{{ item }}"
@@ -32,33 +31,34 @@
     password: "{{ mariadb.root_password }}"
     login_user: root
     login_password: "{{ mariadb.root_password }}"
+    state: present
   with_items:
     - "{{ ansible_hostname }}"
     - 127.0.0.1
     - ::1
     - localhost
 
-- name: mariadb | Create databases
+- name: MariaDB | Create databases
   mysql_db:
     name: "{{ mariadb.database }}"
-    state: present
     login_user: root
     login_password: "{{ mariadb.root_password }}"
+    state: present
 
-- name: mariadb | Create users
+- name: MariaDB | Create users
   mysql_user:
     name: "{{ mariadb.user }}"
     password: "{{ mariadb.password }}"
     priv: "*.*:ALL"
     host: "%"
-    state: present
     login_user: root 
     login_password: "{{ mariadb.root_password }}"
+    state: present
 
-- name: mariadb | Allow all remote connections
+- name: MariaDB | Allow all remote connections
   lineinfile:
     dest: /etc/mysql/my.cnf
-    state: present
     regexp: "^bind-address.*"
     line: bind-address = 0.0.0.0
+    state: present
   notify: restart mariadb
