--- a/ansible/roles/php/tasks/php-fpm.yml
+++ b/ansible/roles/php/tasks/php-fpm.yml
@@ -1,52 +1,56 @@
 ---
-- name: Set permissions on socket - owner
+- name: PHP | Set permissions on socket - owner
   lineinfile:
     dest: /etc/php/7.0/fpm/pool.d/www.conf
-    state: present
     regexp: "^;?listen.owner"
     line: listen.owner = www-data
+    state: present
   notify: restart php7.0-fpm
 
-- name: Set permissions on socket - group
+- name: PHP | Set permissions on socket - group
   lineinfile:
     dest: /etc/php/7.0/fpm/pool.d/www.conf
-    state: present
     regexp: "^;?listen.group"
     line: listen.group = www-data
+    state: present
   notify: restart php7.0-fpm
 
-- name: Set permissions on socket - mode
+- name: PHP | Set permissions on socket - mode
   lineinfile:
     dest: /etc/php/7.0/fpm/pool.d/www.conf
-    state: present
     regexp: "^;?listen.mode"
     line: listen.mode = 0660
+    state: present
   notify: restart php7.0-fpm
 
-- name: Ensure timezone is set in fpm php.ini
+- name: PHP | Ensure timezone is set in fpm php.ini
   lineinfile:
     dest: "{{ php_ini.fpm }}"
     regexp: "^;?date.timezone"
     line: date.timezone = {{ base.timezone }}
+    state: present
   notify: restart php7.0-fpm
 
-- name: Disable fix_pathinfo for php .ini files
+- name: PHP | Disable fix_pathinfo for php .ini files
   lineinfile:
     dest: "{{ php_ini.fpm }}"
     regexp: "^;?cgi.fix_pathinfo"
     line: cgi.fix_pathinfo=0
+    state: present
   notify: restart php7.0-fpm
 
-- name: Set max upload filesize
+- name: PHP | Set max upload filesize
   lineinfile:
     dest: "{{ php_ini.fpm }}"
     regexp: "^;?upload_max_filesize"
     line: "upload_max_filesize = {{ php.max_file_upload }}"
+    state: present
   notify: restart php7.0-fpm
 
-- name: Set max post size
+- name: PHP | Set max post size
   lineinfile:
     dest: "{{ php_ini.fpm }}"
     regexp: "^;?post_max_size"
     line: "post_max_size = {{ php.max_body_size }}"
+    state: present
   notify: restart php7.0-fpm
