--- a/ansible/roles/php/vars/main.yml
+++ b/ansible/roles/php/vars/main.yml
@@ -8,8 +8,8 @@ php_packages:
   - php7.0-curl
   - php7.0-gd
   #- php7.0-gmp
-  #- php7.0-memcached
-  #- php7.0-imagick
+  - php7.0-memcached
+  - php7.0-imagick
   - php7.0-json
   - php7.0-intl
 php_ini:
